[project]
name = "aiorussoundrnet"
version = "0.1.0"
description = "Asyncio client for Russound RNET devices."
authors = [
    {name = "Noah Husby",email = "opensource@husbylabs.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/noahhusby/aiorussoundrnet"
repository = "https://github.com/noahhusby/aiorussoundrnet"
documentation = "https://github.com/noahhusby/aiorussoundrnet"

[tool.poetry.dependencies]
python = "^3.11"
mashumaro = "^3.11"
orjson = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
coverage = {version = "7.10.3"}
mypy = "1.17.1"
pre-commit = "4.3.0"
pre-commit-hooks = "6.0.0"
pylint = "3.3.8"
pytest = "8.4.1"
pytest-asyncio = "1.1.0"
pytest-cov = "6.2.1"
ruff = "0.12.9"

[tool.poetry.group.docs.dependencies]
pdoc = ">=14.7,<16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
