[project]
name = "aiorussoundrnet"
version = "0.1.0"
description = "Asyncio client for Russound RNET devices."
authors = [
    {name = "Noah Husby",email = "opensource@husbylabs.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/noahhusby/aiorussoundrnet"
repository = "https://github.com/noahhusby/aiorussoundrnet"
documentation = "https://github.com/noahhusby/aiorussoundrnet"

[tool.poetry.dependencies]
python = "^3.11"
mashumaro = "^3.17"
orjson = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
coverage = {version = "7.13.0"}
mypy = "1.19.1"
pre-commit = "4.5.1"
pre-commit-hooks = "6.0.0"
pylint = "4.0.4"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
ruff = "0.14.10"

[tool.poetry.group.docs.dependencies]
pdoc = ">=14.7,<17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
